<resources>
    <string name="app_name">Cinemateca</string>
    <string name="action_popular">Sort by most popular</string>
    <string name="action_rating">Sort by top rated</string>
    <string name="movie_name">Title</string>
    <string name="movie_details">Details</string>
    <string name="movie_description">Description</string>
    <string name="movie_rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="sort_order_key">Sort Order</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Movie reviews</string>
    <string name="action_favorite">Favorite Movies</string>
    <string name="favorite">Favorite</string>
    <string name="pref_favorite_key">show_favorite</string>
    <string name="pref_most_popular">pref_most_popular</string>
    <string name="pref_highest_rated">pref_highest_rated</string>
    <string name="pref_sort_order_label">label</string>
    <string name="pref_show_favorite">show_favorite</string>
</resources>
