<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="189dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:padding="@dimen/padding_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.166"/>

            <TextView
                android:id="@+id/Favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:padding="@dimen/padding_top"
                android:text="@string/favorite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toEndOf="@+id/movie_image"
                app:layout_constraintTop_toTopOf="parent"/>

            <CheckBox
                android:id="@+id/fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="6dp"
                android:summaryOn="shown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/Favorite"
                app:layout_constraintTop_toBottomOf="@+id/Favorite"
                app:layout_constraintVertical_bias="0.016"/>

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/movie_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/movie_image"
                app:layout_constraintStart_toStartOf="@+id/movie_image"
                app:layout_constraintTop_toBottomOf="@+id/movie_image"/>


            <TextView
                android:id="@+id/titleTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/movie_image"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="@+id/movie_image"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle"
                app:layout_constraintVertical_bias="0.0"/>

        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/DescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_top"
            android:text="@string/movie_description"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ratingTitle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:padding="@dimen/padding_top"
                android:text="@string/movie_rating"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/releaseTitle"
                app:layout_constraintHorizontal_bias="0.281"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/ratingScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ratingTitle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/ratingTitle"
                app:layout_constraintStart_toStartOf="@+id/ratingTitle"
                app:layout_constraintTop_toBottomOf="@+id/ratingTitle"/>

            <TextView
                android:id="@+id/releaseTitle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:padding="@dimen/padding_top"
                android:text="@string/release_date"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/releaseTitle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/releaseTitle"
                app:layout_constraintStart_toStartOf="@+id/releaseTitle"
                app:layout_constraintTop_toBottomOf="@+id/releaseTitle"/>
        </android.support.constraint.ConstraintLayout>
        <!--
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="15dp"
              android:id/>
        -->
        <TextView
            android:id="@+id/trailerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_top"
            android:text="@string/trailer"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/movieReviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_top"
            android:text="@string/reviews"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
